
= ruote-redis - CHANGELOG.txt


== ruote-redis 2.2.0    released 2011/03/01

- Ruote::Redis::Storage (instead of RedisStorage)
- fixed get_many result order (was broken for 1.8.7)


== ruote-redis 2.1.11    released 2010/10/01

- storage format change (thanks @wwkeyboard)
- get_many(type, keys) support (array of keys instead of lonely regex key)
- get_many(type, nil, :skip => 10) support
- get_many(type, nil, :count => true) support


== ruote-redis 2.1.10    released 2010/06/15

- works with redis-rb 1.0.2 and 2.0
- initial release
